syntax="proto3";
package chat.protocol;
option java_package = "com.example.protobuffprotocol";
option java_outer_classname ="MotoProtobufs";

message User {
    string id =1;
    string password=2;
}

message Entry{
  int32 idrace = 1;
  int32 idparticipant=2;
}

message Participant {
  int32 id=1;
  string firstname=2;
  string lastname=3;
  string teamname=4;
}

message Race {
  int32 id=1;
  int32 enginecapacity=2;
  string name=3;
}

message RaceDTO  {
  string racename=1;
  int32 enginecapacity=2;
  int32 participants=3;
}

message ParticipantDTO {
  string firstname=1;
  string lastname=2;
  int32 enginecapacity=3;
}

message MotoRequest {
  enum Type {Unknown=0; Login=1; Logout=2; GetRaceEntriesByEngineCapacity=3;
    GetParticipantNameAndEngineCapacity=4; GetAllTeamNames=5;GetAllEngineCapacities=6;
    FindRaceByEngineCapacity=7; GetLastParticipant=8; AddParticipant=9;
    AddEntry=10;
  }
  Type type=1;

  oneof payload{
    User user=2;
    string teamname=3;
    int32 enginecapacity=4;
    Participant participant =5;
    Entry entry=6;
    }
}

message MotoResponse  {
  enum Type { Unknown=0; Ok = 1; Error = 2;GetRaceEntriesByEngineCapacity=3;GetParticipantNameAndEngineCapacity=4;
  GetAllTeamNames=5;GetAllEngineCapacities=6;FindRaceByEngineCapacity=7; GetLastParticipant=8;
  }
  Type type=1;

  string error=2;
  repeated RaceDTO races =3;
  repeated  ParticipantDTO participants=4;
  repeated string teamnames=5;
  repeated int32 enginecapacities=6;
  Race race = 7;
  Participant participant=8;

}